# Simulation-of-the-dynamics-of-a-double-pendulum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: DoublePendulum.h
include/ui/: SplashScreenHandler.h
models/: DoublePendulum.glb
models/DoublePendulum.qzb/: DoublePendulum.qml
models/DoublePendulum.qzb/meshes/: head_mesh.mesh  pendulum_001_mesh.mesh  pendulum_002_mesh.mesh  pendulum_003_mesh.mesh  pendulum_004_mesh.mesh  pendulum_005_mesh.mesh  pendulum_mesh.mesh
resources/: resources.qrc
src/core/: DoublePendulum.cpp
src/qml/: ChartPlaceholder.qml  HelpPopup.qml  IncrementalTraceDrawer.qml  Main.qml  ParameterStepper.qml  PendulumCanvas2D.qml  SplashScreen.qml  pendulumCanvas.qml
src/ui/: SplashScreenHandler.cpp
